# EvaGeM

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py  tutorial.ipynb
EvaGeM/: classification_based.py  distance_histogram.py  distribution_based.py  evaluate_all.py  histograms.py  main.py  umaps.py
doc/EvaGeM/: classification_based.html  main.html  umaps.html
docs/: classification_based.html  distance_histogram.html  distribution_based.html  evaluate_all.html  histograms.html  index.html  main.html  umaps.html
docs/EvaGeM/: distribution_based.html  index.html
documentation/EvaGeM/: distance_histogram.html  main.html
