[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EvaGeM"
version = "0.1"
description = ""
readme = ""
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "umap-learn",
    "xgboost",
    "skorch",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
